<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accountItem"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/menu_item_account" />

    <item
        android:id="@+id/settingsItem"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_settings" />
    <item
        android:id="@+id/billingItem"
        android:icon="@drawable/ic_credit_card"
        android:title="@string/menu_item_billing" />
    <item
        android:id="@+id/teamItem"
        android:icon="@drawable/ic_team"
        android:title="@string/menu_item_team" />
    <item
        android:id="@+id/signOutItem"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/menu_item_sign_out" />

</menu>