<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    style="@style/TopRoundedCardView.ShapeAppearanceOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".ui.fragments.certificate.CertificateFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/backCard"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorLastCard"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/certificateTopCard"
        app:layout_constraintEnd_toEndOf="@+id/certificateTopCard"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/certificateTopCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Back Card"
            android:textAlignment="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/middleCard"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorMiddleCard"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/certificateTopCard"
        app:layout_constraintEnd_toEndOf="@+id/certificateTopCard"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/certificateTopCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Middle Card"
            android:textAlignment="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/certificateTopCard"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/certificateNameTV"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textColor="@color/certificateNameColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="UI Design" />

            <TextView
                android:id="@+id/certificateConstantTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/certificate"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/certificateNameTV"
                app:layout_constraintStart_toStartOf="@+id/certificateNameTV"
                app:layout_constraintTop_toBottomOf="@+id/certificateNameTV" />

            <ImageView
                android:id="@+id/certLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_android"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/certificateNameTV"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/certIllusIMG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/certificateConstantTV"
                tools:srcCompat="@drawable/half_circle_shape" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomCard"
        style="@style/TopRoundedCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/view_shade" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/certIssueTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:textSize="18sp"
                tools:text="@string/certificate_issues_text" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/certFragIllusIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration3"
        app:layout_constraintBottom_toTopOf="@+id/middleCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/certificates"
        android:textAppearance="@style/AppTheme.TextView.Heading1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>